--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "parcel-bundler": "^1.12.4"
   },
   "dependencies": {
-    "jquery": "^3.6.3"
+    "jquery": "^3.6.3",
+    "package.json": "^2.0.1"
   }
 }
