--- a/.htaccess
+++ b/.htaccess
@@ -95,11 +95,32 @@
 # https://httpd.apache.org/docs/current/mod/core.html#errordocument
 
 ErrorDocument 404 /404.shtml
-ErrorDocument 404 https://estart.by/404.shtml
 # ----------------------------------------------------------------------
 # | Error prevention                                                   |
 # ----------------------------------------------------------------------
-
+Options +FollowSymLinks
+RewriteEngine On
+#
+RewriteCond %{HTTP_HOST} ^estart\.by$ [NC]
+RewriteRule ^(.*)$ http://www.estart.by/$1 [R=301,L]
+#
+RewriteCond %{HTTP_HOST} ^www.estart\.by$ [NC]
+RewriteRule ^(.*)$ http://estart.by/$1 [R=301,L]
+#
+RewriteCond %{SERVER_PORT} ^80$ [OR]
+RewriteCond %{HTTP} =on
+RewriteRule ^(.*)$ https://estart.by/$1 [R=301,L]
+#
+RewriteRule ^dir /dir-new/$1 [R=301,L]
+#
+RewriteCond %{SERVER_PORT} ^80$ [OR]
+RewriteCond %{HTTP} =on
+RewriteRule ^(.*)$ https://domain.ru/$1 [R=301,L]
+#
+RewriteCond %{HTTP_REFERER} ref-spam-site.ru [NC,OR]
+RewriteCond %{HTTP_REFERER} another-ref-spam.ru [NC]
+RewriteRule .* - [F]
+#
 # Disable the pattern matching based on filenames.
 #
 # This setting prevents Apache from returning a 404 error as the result of a
@@ -1234,43 +1255,4 @@ FileETag None
 #     RewriteCond %{REQUEST_FILENAME} !-f
 #     RewriteRule ^(.+)\.(\w+)\.(bmp|css|cur|gif|ico|jpe?g|m?js|a?png|svgz?|webp|webmanifest)$ $1.$3 [L]
 # </IfModule>
-<IfModule mod_rewrite.c>
-    RewriteEngine On
-    RewriteCond %{HTTP_HOST} ^www.estart.by$ [NC]
-    RewriteRule ^(.*)$ http://site.ru/$1 [R=301,L]
-</IfModule>
 
-<IfModule mod_rewrite.c>
-    RewriteCond  %{HTTP_HOST}   ^estart\.by$ [NC]
-    RewriteRule ^(.*)$ http://www.estart.by/$1 [R=301,L]
-</IfModule>
-
-<IfModule mod_rewrite.c>
-    RewriteCond %{HTTP_HOST} !^www\.estart\.by
-    RewriteRule ^(.*)$ http://www.estart.by/$1[R=301,L]
-</IfModule>
-
-<IfModule mod_rewrite.c>
-    RewriteCond      %{REQUEST_URI}  ^(.*)//(.*)$
-    RewriteRule    . %1/%2  [R=301,L]
-</IfModule>
-
-<IfModule mod_rewrite.c>
-    RewriteCond      %{REQUEST_URI} ^(.*)--(.*)$
-    RewriteRule   . %1-%2 [R=301,L]
-</IfModule>
-<IfModule mod_rewrite.c>
-    $lowerURI=strtolower($_SERVER['REQUEST_URI']);
-    if($_SERVER['REQUEST_URI']!=$lowerURI)
-    {
-    header("HTTP/1.1 301 Moved Permanently");
-    header("Location: http://" . $_SERVER['HTTP_HOST'] . $lowerURI);
-    exit();
-    }
-</IfModule>
-
-
-<IfModule mod_rewrite.c>
-    RewriteCond %{HTTPS} off
-    RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
-</IfModule>
